layout issues fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,6 @@
 
 
-.main-section {
-	background: #3c1454;
-    height: 100%;
-    max-width: 1366px;
-    margin: 0 auto;
-}
+
 
 input{
     border: 1px solid #C6C9CA;
@@ -263,7 +258,6 @@ input{
 
   .right-content-text{
     background-color: #ffffff;     
-    word-break: break-all;
     padding:15px 35px 15px 15px;
   }
 
